--- a/src/fire.scss
+++ b/src/fire.scss
@@ -10,7 +10,7 @@ $box-shadow2: ();
                random($width)-$width / 2 + px
                random($height)-$height / 1.2 + px
                hsl(random(360), 100, 50);
-  $box-shadow2: $box-shadow2, 0 0 #fff
+  $box-shadow2: $box-shadow2, 0 0 red
 }
 @mixin keyframes ($animationName) {
     @-webkit-keyframes #{$animationName} {
